指名回数券登録機能のテストコードを実装。
それに伴いdata.aqlファイルの内容とリポジトリテストの会員の検索、登録メソッドの値の検証結果を変更。